--- a/resources/var/apps/modules/job/templates/l1/view-company.html
+++ b/resources/var/apps/modules/job/templates/l1/view-company.html
@@ -47,7 +47,7 @@
             <div class="list" ng-show="company.places.length">
 
                 <div class="item item-divider item-divider-custom item-button-right">
-                    <h2>{{ "Jobs" | translate }}</h2>
+                    <h2>{{ "Positions" | translate }}</h2>
                     <button ng-show="is_admin" ng-click="createModal()" class="button create-job">
                         <i class="icon ion-ios-plus-outline"></i>
                     </button>
