--- a/resources/var/apps/modules/job/templates/l1/list.html
+++ b/resources/var/apps/modules/job/templates/l1/list.html
@@ -43,8 +43,8 @@
         <div class="list" ng-show="collection.length">
 
             <div ng-click="showItem(item)" ng-repeat="item in collection | filter: filterPlaces">
-                <div class="item item-custom item-place" ng-class="{ 'item-thumbnail-custom': item.company_logo && options.display_place_icon }">
-                    <img ng-src="{{ item.company_logo }}" ng-if="item.company_logo && options.display_place_icon" />
+                <div class="item item-custom item-place" ng-class="{ 'item-thumbnail-custom': item.icon && options.display_place_icon }">
+                    <img ng-src="{{ item.icon }}" ng-if="item.icon && options.display_place_icon" />
                     <h2>{{ item.title }} <span ng-if="item.contract_type">{{ item.contract_type }}</span></h2>
                     <p class="subtitle" ng-if="item.subtitle" ng-bind-html="item.subtitle"></p>
                     <p class="subtitle-company" ng-if="item.company_name || item.location">
